--- a/style/status.css
+++ b/style/status.css
@@ -9,8 +9,10 @@
 	border:0;
 	padding: 0 48px 0 0;
 	margin:0;
-	z-index:5;
 	align-items: center;
+}
+body:not(:has(> .fn__flex .fullscreen)) #status {
+	z-index: 5; /* 全屏时需要恢复 */
 }
 
 .status .toolbar__item:not(.toolbar__item--close) {
